Implement Register & Synchronise list feature

--- a/client/index.html
+++ b/client/index.html
@@ -48,19 +48,48 @@
           </div>
         </div>
       <div class="card margin-bottom">
-          <div class="card-header">
-            Groceries:
-          </div>
-          <div class="card-body">
-            <blockquote class="blockquote mb-0">
-                <div class="alert alert-info" role="alert" id="grocery-message">
-                  There are no groceries!
-                </div>
-                <div id="list">
-                </div>
-            </blockquote>
-          </div>
+        <div class="card-header">
+          Groceries:
         </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+              <div class="alert alert-info" role="alert" id="grocery-message">
+                There are no groceries!
+              </div>
+              <div id="list">
+              </div>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+    <div class="card margin-bottom">
+      <div class="card-header">
+        Register list / Sync list
+      </div>
+      <div class="card-body">
+        <blockquote class="blockquote mb-0">
+          <div class="form-row">
+            <div class="col-sm-5 col-md-5 col-5">
+              <input type="text" class="form-control" id="list-name" placeholder="List name" />
+              <div class="alert alert-danger margin-top" role="alert" id="list-name-message">
+                  List name already exists!
+              </div>
+            </div>
+            <div class="col-sm-1 col-md-1 col-1">
+              <button class="btn btn-primary w-100" id="add-list-name"><i class="fas fa-plus"></i></button>
+            </div>
+            <div class="col-sm-5 col-md-5 col-5">
+              <input type="text" class="form-control" id="target-list-name" placeholder="List to sync with" />
+              <div class="alert alert-danger margin-top" role="alert" id="target-list-name-message">
+                  Target list does not exist!
+              </div>
+            </div>
+            <div class="col-sm-1 col-md-1 col-1">
+              <button class="btn btn-info w-100" id="sync-lists"><i class="fas fa-sync"></i></i></button>
+            </div>
+          </div>
+        </blockquote>
+      </div>
     </div>
   </div>
   <script src="index.js"></script>
