Name input placeholders appropriately

--- a/client/index.html
+++ b/client/index.html
@@ -64,13 +64,13 @@
     </div>
     <div class="card margin-bottom">
       <div class="card-header">
-        Register list / Sync list
+        Register list / Synchronise list
       </div>
       <div class="card-body">
         <blockquote class="blockquote mb-0">
           <div class="form-row">
             <div class="col-sm-5 col-md-5 col-5">
-              <input type="text" class="form-control" id="list-name" placeholder="List name" />
+              <input type="text" class="form-control" id="list-name" placeholder="Register list" />
               <div class="alert alert-danger margin-top" role="alert" id="list-name-message">
                   List name already exists!
               </div>
@@ -79,7 +79,7 @@
               <button class="btn btn-primary w-100" id="add-list-name"><i class="fas fa-plus"></i></button>
             </div>
             <div class="col-sm-5 col-md-5 col-5">
-              <input type="text" class="form-control" id="target-list-name" placeholder="List to sync with" />
+              <input type="text" class="form-control" id="target-list-name" placeholder="Synchronise with a list" />
               <div class="alert alert-danger margin-top" role="alert" id="target-list-name-message">
                   Target list does not exist!
               </div>
